# fortune-telling-core

./: .gitignore  AGENTS.md  JOURNAL.md  README.md  mkdocs.yml  pyproject.toml
.agents/docs/: ARCHITECTURE.md  JOURNAL.md  OVERVIEW.md  TODO.md
.agents/docs/LTM/: INDEX.md  api-docs-and-quality-gate.md  astrology-backend.md  computed-tradition-pattern.md  computed-traditions-astronomy-synthesis.md  core-engine-replay-synthesis.md  core-reading-model-and-replay.md  demo-cli.md  four-pillars-backend.md  github-actions-ci-cd.md  interpreter-package-boundary.md  licensing-and-dependency-policy.md  nine-star-ki-backend.md  operations-quality-compliance-synthesis.md  packaging-and-release-readiness.md  project-scaffold-and-agent-ops.md  shared-astronomy-and-ephemeris.md  tarot-reference.md
.agents/docs/design/: non-ascii-name-numerology.md  relations-grid-sequence-extension.md
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: index.md  traditions-reference.md
docs/api/: astronomy.md  core.md
docs/api/traditions/: astrology.md  can_chi.md  celtic_tree.md  chaldean_numerology.md  cjk_name_strokes.md  cyrillic_pythagorean.md  cyrillic_slavonic_numerals.md  dominoes.md  four_pillars.md  geomancy.md  greek_isopsephy.md  haab.md  hebrew_gematria.md  iching.md  koyomi.md  lenormand.md  name_numerology.md  nine_star_ki.md  numerology.md  runes.md  sanmeigaku.md  sukuyo.md  tarot.md  thaksa.md  tzolkin.md  weton.md  zi_wei.md
src/fortune_telling_core/: __init__.py  _null_rng.py  _parsing.py  _time.py  cli.py  coerce.py  draw.py  engine.py  errors.py  provenance.py  reading.py  request.py  rng.py  serde.py  serde_types.py  spread.py  symbols.py
src/fortune_telling_core/astronomy/: __init__.py  bodies.py  deltat.py  errors.py  julian.py  lunisolar.py  nutation.py  position.py  solar.py  solar_terms.py  time_model.py
src/fortune_telling_core/traditions/: __init__.py  _name_text.py
tests/: test_cli.py  test_package.py  test_rng.py  test_summary_contract.py
tests/astronomy/: test_builtin_ephemeris_accuracy.py  test_builtin_series_generation.py  test_julian_solar.py  test_lunisolar.py  test_solar_terms.py  test_time_model.py
tests/core/: test_draw.py  test_schema_version.py  test_serde_roundtrip.py  test_symbols_spread.py
tests/traditions/_name_values/: test_latin_chaldean.py  test_latin_pythagorean.py  test_name_text.py
tests/traditions/astrology/: test_cast_replay.py  test_dates.py  test_ephemeris.py  test_houses.py  test_sidereal_and_leakage.py  test_sun_sign.py  test_transits.py  (+1 more)
tools/ephemeris/: download_vsop87d.py  generate_builtin_series.py
tools/unihan/: download_unihan.py  generate_total_strokes.py
(+270 files in other folders)
